Code clean up and test run

--- a/01-training-profiles-visualization.ipynb
+++ b/01-training-profiles-visualization.ipynb
@@ -22,8 +22,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"/scr/zitong/cp_dino/experiments/DINO01/combined_set_small/\"\n",
-    "files = [x for x in os.listdir(path) if x.startswith(\"features\")]"
+    "feature_path = ''\n",
+    "df_path = ''\n",
+    "\n",
+    "output_folder = 'output'\n",
+    "output_file = 'UMAP_of_Combined_CP.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = [x for x in os.listdir(feature_path) if x.startswith(\"features\")]"
    ]
   },
   {
@@ -64,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/scr/zitong/cp_dino/sc-metadata_dino.csv\")"
+    "df = pd.read_csv(df_path)"
    ]
   },
   {
@@ -94,8 +106,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df\n",
-    "df.to_csv('UMAP_of_Combined_CP.csv',index=False)"
+    "if not os.path.isdir(output_folder):\n",
+    "    os.mkdir(output_folder)\n",
+    "    \n",
+    "df.to_csv(f'{output_folder}/{output_file}',index=False)"
    ]
   },
   {
@@ -111,9 +125,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CP_DINO",
+   "display_name": "Python [conda env:.conda-LINCS] *",
    "language": "python",
-   "name": "cp_dino"
+   "name": "conda-env-.conda-LINCS-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -125,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
