--- a/03-lincs-profiles-visualizations.ipynb
+++ b/03-lincs-profiles-visualizations.ipynb
@@ -23,8 +23,11 @@
    "outputs": [],
    "source": [
     "NUM_FEATURES = 384\n",
-    "# INPUT_PROFILES = \"well_level_profiles_vits_LINCS_1e-5_final.csv\"\n",
-    "INPUT_PROFILES = \"well_level_data_vit_small_128_LINCS_1e-2.csv\""
+    "INPUT_PROFILES = \"data/well_level_profiles_vits_LINCS_1e-5_final.csv\"\n",
+    "MOA_FILE = 'moa_annotation.csv'\n",
+    "\n",
+    "OUTPUT_CSV = 'output/UMAP_of_LINCS_ViT_Small.csv'\n",
+    "OUTPUT_UMAP = 'output/UMAP_VITs.png'"
    ]
   },
   {
@@ -44,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cpds_moas = pd.read_csv('moa_annotation.csv')"
+    "df_cpds_moas = pd.read_csv(MOA_FILE)"
    ]
   },
   {
@@ -79,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Site-level UMAP"
+    "# Well-level UMAP"
    ]
   },
   {
@@ -134,7 +137,7 @@
     "d = sb.scatterplot(data=highlight, x=\"X\", y=\"Y\", s=5, hue=\"highlight_moa\", palette=palette)\n",
     "\n",
     "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
-    "plt.savefig('output/UMAP_VITs.png', bbox_inches='tight')"
+    "plt.savefig(OUTPUT_UMAP, bbox_inches='tight')"
    ]
   },
   {
@@ -143,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aux.to_csv('output/UMAP_of_LINCS_ViT_Small.csv',index=False)"
+    "aux.to_csv(OUTPUT_CSV,index=False)"
    ]
   }
  ],
