--- a/04-lincs-well-aggregation-sphering-vits.ipynb
+++ b/04-lincs-well-aggregation-sphering-vits.ipynb
@@ -39,7 +39,11 @@
    },
    "outputs": [],
    "source": [
-    "OUTPUT_FILE = \"well_level_profiles_vits_LINCS_1e-5_final.csv\"\n",
+    "feature_path = ''\n",
+    "feature_add_path = ''\n",
+    "\n",
+    "output_folder = 'data'\n",
+    "output_file = \"well_level_profiles_vits_LINCS_1e-5_final.csv\"\n",
     "REG_PARAM = 1e-5"
    ]
   },
@@ -50,8 +54,7 @@
    "outputs": [],
    "source": [
     "# Load metadata\n",
-    "meta = pd.read_csv(\"/scr/data/LINCS/DP-project/outputs/max_concentration_set/sc-metadata.csv\")\n",
-    "meta_add = pd.read_csv(\"/scr/data/LINCS/DP-project/outputs/SQ00015147_maxconc/sc-metadata.csv\")"
+    "meta = pd.read_csv(\"/scr/data/LINCS/DP-project/outputs/max_concentration_set/sc-metadata.csv\")"
    ]
   },
   {
@@ -60,15 +63,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = [str(f) for f in Path('/scr/zitong/cp_dino/experiments/DINO01/LINCS/').glob('features*.pth')]\n",
+    "files = [str(f) for f in Path(feature_path).glob('features*.pth')]\n",
     "open_files = [torch.load(f) for f in files]\n",
     "features = torch.concat([f[0] for f in open_files])\n",
     "\n",
     "print(\"Total images:\",features.shape[0])\n",
-    "print(\"Number of features per image:\", features.shape[1])\n",
-    "\n",
-    "# cell_names = np.concatenate(([f[1] for f in open_files]))\n",
-    "# torch.save((features, cell_names), '/scr/zitong/cp_dino/experiments/DINOBASE/Combined/features.pth')"
+    "print(\"Number of features per image:\", features.shape[1])"
    ]
   },
   {
@@ -77,25 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files_add = [str(f) for f in Path('/scr/zitong/cp_dino/experiments/DINO01/LINCS/additional/').glob('features*.pth')]\n",
-    "open_files_add = [torch.load(f) for f in files_add]\n",
-    "features_add = torch.concat([f[0] for f in open_files_add])\n",
-    "\n",
-    "print(\"Total images:\",features_add.shape[0])\n",
-    "print(\"Number of features per image:\", features_add.shape[1])\n",
-    "\n",
-    "# cell_names = np.concatenate(([f[1] for f in open_files]))\n",
-    "# torch.save((features, cell_names), '/scr/zitong/cp_dino/experiments/DINOBASE/Combined/features.pth')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaled_features = StandardScaler().fit_transform(features.numpy())\n",
-    "scaled_features_add = StandardScaler().fit_transform(features_add.numpy())\n"
+    "scaled_features = StandardScaler().fit_transform(features.numpy())"
    ]
   },
   {
@@ -105,10 +87,7 @@
    "outputs": [],
    "source": [
     "cell_names = np.concatenate(([f[1] for f in open_files]))\n",
-    "order, ordered_features = (np.array(t) for t in zip(*sorted(zip(cell_names, scaled_features))))\n",
-    "\n",
-    "cell_names_add = np.concatenate(([f[1] for f in open_files_add]))\n",
-    "order_add, ordered_features_add = (np.array(t) for t in zip(*sorted(zip(cell_names_add, scaled_features_add))))"
+    "order, ordered_features = (np.array(t) for t in zip(*sorted(zip(cell_names, scaled_features))))"
    ]
   },
   {
@@ -139,7 +118,6 @@
     "\n",
     "for site_name in tqdm(list(group_dict.keys())):\n",
     "    metadata = site_name.split('/')\n",
-    "    if metadata[0] == 'SQ00015147': continue\n",
     "    indices = group_dict[site_name]\n",
     "    mean_profile = np.median(ordered_features[indices], axis=0)\n",
     "    \n",
@@ -152,29 +130,6 @@
     "\n",
     "    )\n",
     "    site_level_features.append(mean_profile)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "site_dict = meta_add.groupby(['Key']).groups\n",
-    "for site_name in tqdm(list(site_dict.keys())):\n",
-    "    metadata = site_name.split('/')\n",
-    "    indices = site_dict[site_name]\n",
-    "    mean_profile = np.median(ordered_features_add[indices], axis=0)\n",
-    "    \n",
-    "    site_level_data.append(\n",
-    "        {\n",
-    "            \"Plate\": metadata[0],\n",
-    "            \"Well\": metadata[1],\n",
-    "            \"Treatment\": meta_add[\"Treatment\"][indices].unique()[0]\n",
-    "        }\n",
-    "\n",
-    "    )\n",
-    "    site_level_features.append(mean_profile)"
    ]
   },
   {
@@ -225,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wells.to_csv(\"Wells_Prewhitened_ViT_small_LINCS.csv\")"
+    "wells.to_csv(f\"{output_folder}/Wells_Prewhitened_ViT_small_LINCS.csv\")"
    ]
   },
   {
@@ -266,7 +221,7 @@
    "source": [
     "# Save whitened profiles\n",
     "wells[columns2] = whD\n",
-    "wells.to_csv(OUTPUT_FILE, index=False)"
+    "wells.to_csv(f'{output_folder}/{output_file}', index=False)"
    ]
   }
  ],
