--- a/05-align-cellprofiler-profiles.ipynb
+++ b/05-align-cellprofiler-profiles.ipynb
@@ -50,8 +50,8 @@
    "source": [
     "# Copy well level profiles to '../source_data'\n",
     "# Load Data file for Our Experiment\n",
-    "df_dino = pd.read_csv(\"../source_data/unprocessed_vit_small_final.csv\")\n",
-    "df_CNN = pd.read_csv('../source_data/unprocessed_CNN_complete_cpds.csv')\n",
+    "df_dino = pd.read_csv(\"data/well_level_profiles_vits_LINCS_1e-5_final.csv\")\n",
+    "df_CNN = pd.read_csv('data/well_level_profiles_cpcnn_LINCS_1e-5_final.csv')\n",
     "print(df_dino.shape, df_CNN.shape)"
    ]
   },
@@ -61,8 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load Way et al's datafile\n",
-    "data_path = '../../1.Data-exploration/Profiles_level4/cell_painting/cellpainting_lvl4_cpd_replicate_datasets/'\n",
+    "# Load CellProfiler's datafile\n",
+    "data_path = 'data/'\n",
     "\n",
     "df_cellprofiler = pd.read_csv(\n",
     "    os.path.join(data_path, 'cp_level4_cpd_replicates.csv.gz'), \n",
@@ -99,18 +99,6 @@
     "                        & set(df_cellprofiler[\"broad_id\"].unique()))\n",
     "\n",
     "len(common_treatment)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_level4_cp[df_level4_cp.moa.str.contains('Proteasome inhibitor', regex=False)].pert_iname.unique()\n",
-    "# df_level4_cp[df_level4_cp.moa.str.contains('NFkB pathway inhibitor', regex=False)].pert_iname.unique()\n",
-    "# df_level4_cp_small[df_level4_cp_small.moa.str.contains('Proteasome inhibitor', regex=False)]\n",
-    "df_level4_cp[df_level4_cp.pert_iname=='bortezomib'].Metadata_pert_id.unique()"
    ]
   },
   {
@@ -188,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cpds_moas.to_csv('/scr/zitong/DeepProfilerExperiments_Sam/DINO/moa_annotation.csv', index=False)"
+    "df_cpds_moas.to_csv('moa_annotation.csv', index=False)"
    ]
   },
   {
@@ -227,10 +215,10 @@
    "outputs": [],
    "source": [
     "#Save file to csv\n",
-    "out_dir = '/scr/zitong/lincs-profiling-complementarity/2.MOA-prediction/source_data'\n",
+    "out_dir = 'data'\n",
     "\n",
     "df_cellprofiler.to_csv(f\"{out_dir}/cp_cellprofiler_final.csv\",index=False)\n",
-    "df_dino.to_csv(f\"/{out_dir}/cp_dino_final.csv\",index=False)\n",
+    "df_dino.to_csv(f\"{out_dir}/cp_dino_final.csv\",index=False)\n",
     "df_CNN.to_csv(f\"{out_dir}/cp_CNN_final.csv\",index=False)"
    ]
   },
