--- a/06-train-test-split.ipynb
+++ b/06-train-test-split.ipynb
@@ -88,8 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cp_data_path = '../source_data/'\n",
-    "cpd_split_path = '../1.compound_split_train_test/data'\n",
+    "cp_data_path = 'data/'\n",
+    "cpd_split_path = 'data/'\n",
     "\n",
     "# file name of features\n",
     "file_cp = \"_cellprofiler_final\"\n",
@@ -302,28 +302,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_to_csv(df_cellprofiler_trn, \"model_data/cp/\", f'train_data{file_cp}.csv.gz', compress=\"gzip\")\n",
-    "save_to_csv(df_cellprofiler_tst, \"model_data/cp/\", f'test_data{file_cp}.csv.gz', compress=\"gzip\")\n",
+    "save_to_csv(df_cellprofiler_trn, \"model_data/\", f'train_data{file_cp}.csv.gz', compress=\"gzip\")\n",
+    "save_to_csv(df_cellprofiler_tst, \"model_data/\", f'test_data{file_cp}.csv.gz', compress=\"gzip\")\n",
     "\n",
-    "save_to_csv(df_cnn_trn, \"model_data/cp/\", f'train_data{file_cnn}.csv.gz', compress=\"gzip\")\n",
-    "save_to_csv(df_cnn_tst, \"model_data/cp/\", f'test_data{file_cnn}.csv.gz', compress=\"gzip\")\n",
+    "save_to_csv(df_cnn_trn, \"model_data/\", f'train_data{file_cnn}.csv.gz', compress=\"gzip\")\n",
+    "save_to_csv(df_cnn_tst, \"model_data/\", f'test_data{file_cnn}.csv.gz', compress=\"gzip\")\n",
     "\n",
-    "save_to_csv(df_dino_trn, \"model_data/cp/\", f'train_data{file_dino}.csv.gz', compress=\"gzip\")\n",
-    "save_to_csv(df_dino_tst, \"model_data/cp/\", f'test_data{file_dino}.csv.gz', compress=\"gzip\")\n",
+    "save_to_csv(df_dino_trn, \"model_data/\", f'train_data{file_dino}.csv.gz', compress=\"gzip\")\n",
+    "save_to_csv(df_dino_tst, \"model_data/\", f'test_data{file_dino}.csv.gz', compress=\"gzip\")\n",
     "\n",
-    "save_to_csv(df_cellprofiler_trn_shuf, \"model_data/cp/\", \n",
+    "save_to_csv(df_cellprofiler_trn_shuf, \"model_data/\", \n",
     "            f'train_shuffle_data{file_cp}.csv.gz', compress=\"gzip\")\n",
-    "save_to_csv(df_cellprofiler_tst_shuf, \"model_data/cp/\", \n",
+    "save_to_csv(df_cellprofiler_tst_shuf, \"model_data/\", \n",
     "            f'test_shuffle_data{file_cp}.csv.gz', compress=\"gzip\")\n",
     "\n",
-    "save_to_csv(df_cnn_trn_shuf,  \"model_data/cp/\", \n",
+    "save_to_csv(df_cnn_trn_shuf,  \"model_data/\", \n",
     "            f'train_shuffle_data{file_cnn}.csv.gz', compress=\"gzip\")\n",
-    "save_to_csv(df_cnn_tst_shuf,  \"model_data/cp/\", \n",
+    "save_to_csv(df_cnn_tst_shuf,  \"model_data/\", \n",
     "            f'test_shuffle_data{file_cnn}.csv.gz', compress=\"gzip\")\n",
     "\n",
-    "save_to_csv(df_dino_trn_shuf,  \"model_data/cp/\", \n",
+    "save_to_csv(df_dino_trn_shuf,  \"model_data/\", \n",
     "            f'train_shuffle_data{file_dino}.csv.gz', compress=\"gzip\")\n",
-    "save_to_csv(df_dino_tst_shuf,  \"model_data/cp/\", \n",
+    "save_to_csv(df_dino_tst_shuf,  \"model_data/\", \n",
     "            f'test_shuffle_data{file_dino}.csv.gz', compress=\"gzip\")\n"
    ]
   },
@@ -334,7 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_to_csv(df_moa_targets, \"model_data/cp/\", f'target_labels_final.csv')"
+    "save_to_csv(df_moa_targets, \"model_data/\", f'target_labels_final.csv')"
    ]
   }
  ],
