--- a/08-moa-predictions-visualization.ipynb
+++ b/08-moa-predictions-visualization.ipynb
@@ -145,12 +145,14 @@
    },
    "outputs": [],
    "source": [
-    "base_dir = pathlib.Path(\"../2.data_split/model_data/\")\n",
+    "base_dir = pathlib.Path(\"model_data/\")\n",
+    "\n",
     "file_dino = \"_dino_final\"\n",
     "file_cp = \"_cellprofiler_final\"\n",
     "file_cnn = \"_CNN_final\"\n",
     "\n",
-    "cp_data_dir = pathlib.Path(f\"{base_dir}/cp/\")"
+    "cp_data_dir = pathlib.Path(f\"{base_dir}/cp/\")\n",
+    "\n"
    ]
   },
   {
@@ -196,11 +198,13 @@
    },
    "outputs": [],
    "source": [
-    "model_preds_cp = pathlib.Path(\"../Final_cellprofiler_v3/\")\n",
-    "model_preds_CNN = pathlib.Path(\"../Final_cnn_v3/\")\n",
-    "model_preds_dino = pathlib.Path(\"../Final_dino_v3/\")\n",
+    "result_dir = 'prediction'\n",
     "\n",
-    "model_preds_figures = pathlib.Path(\"final_figure_v3\")"
+    "model_preds_cp = pathlib.Path(f\"{result_dir}/cellprofiler/\")\n",
+    "model_preds_CNN = pathlib.Path(f\"{result_dir}/cnn/\")\n",
+    "model_preds_dino = pathlib.Path(f\"{result_dir}/dino/\")\n",
+    "\n",
+    "model_preds_figures = pathlib.Path(f\"{result_dir}/figures\")"
    ]
   },
   {
@@ -1266,7 +1270,7 @@
     "    df_roc_shuffle.assign(shuffle=True)\n",
     "])\n",
     "\n",
-    "output_file = pathlib.Path(\"performance_results/all_performance_metrics_resnet_final_v3.csv\")\n",
+    "output_file = pathlib.Path(f\"{result_dir}/all_performance_metrics_resnet_final_v3.csv\")\n",
     "full_results_df.to_csv(output_file, index=False)\n",
     "\n",
     "print(full_results_df.shape)\n",
@@ -2249,7 +2253,7 @@
    "outputs": [],
    "source": [
     "# Output individual MOA Precision Recall\n",
-    "output_file = pathlib.Path(\"performance_results/moa_precision_recall_resnet_final_v3.csv\")\n",
+    "output_file = pathlib.Path(f\"{result_dir}/moa_precision_recall_resnet_final_v3.csv\")\n",
     "df_moa_prs.to_csv(output_file, index=False)"
    ]
   },
